--- a/camp.html
+++ b/camp.html
@@ -35,6 +35,7 @@
         </a>
         <a href="camp.html" class="only-leader w-full flex items-center gap-3 px-4 py-3 rounded-xl text-sm font-medium bg-emerald-50 text-emerald-700 shadow-sm"><i data-lucide="trophy" class="w-5 h-5"></i> Campeonato</a>
         <a href="admin.html" class="only-leader w-full flex items-center gap-3 px-4 py-3 rounded-xl text-sm font-medium text-gray-500 hover:bg-gray-50 hover:text-gray-700 transition-colors"><i data-lucide="settings" class="w-5 h-5"></i> Admin</a>
+        <a id="nav-chefe" href="chefe.html" class="hidden w-full flex items-center gap-3 px-4 py-3 rounded-xl text-sm font-medium text-gray-500 hover:bg-gray-50 hover:text-gray-700 transition-colors"><i data-lucide="crown" class="w-5 h-5"></i> Chefe</a>
       </nav>
       <div class="absolute bottom-0 left-0 right-0 p-4 border-t border-gray-100">
         <div class="flex items-center justify-between px-3 py-2">
@@ -116,16 +117,14 @@
   </div>
 
   <script type="module">
-    import { checkAuth, setupSidebar, initIcons, logout, getGuildContext, showToast, checkIsCeo, ensureCeoNavLink, getVipTier } from './logic.js';
+    import { checkAuth, setupSidebar, initIcons, logout, getGuildContext, showToast } from './logic.js';
 
     // Inicialização IMEDIATA (Sem piscar)
     setupSidebar();
 
     function tierRank(t){
-      const s = (t||'free').toString().toLowerCase().trim();
-      if (s==='pro' || s==='business') return 2;
-      if (s==='plus') return 1;
-      return 0;
+      const s=(t||'free').toString().toLowerCase();
+      if(s==='pro' || s==='business') return 2; if(s==='plus') return 1; return 0;
     }
     function applyVip(tier){
       const pro = tierRank(tier) >= 2;
