--- a/dashboard.html
+++ b/dashboard.html
@@ -89,7 +89,7 @@
         <div>
           <h2 class="text-2xl font-bold text-gray-900">Visão Geral</h2>
           <p class="text-gray-500 text-sm mt-1">Resumo da guilda em tempo real</p>
-          <p id="vip-label" class="mt-1 text-xs text-gray-500">Guilda: <span class="font-bold text-gray-800">free</span></p>
+          <p id="vip-label" class="mt-1 text-xs text-gray-500">Guilda: <span class="font-bold text-gray-800"> id="current-plan-name" </span></p>
         </div>
 
         <!-- Cards de Estatísticas -->
