--- a/dashboard.html
+++ b/dashboard.html
@@ -89,8 +89,9 @@
         <div>
           <h2 class="text-2xl font-bold text-gray-900">Visão Geral</h2>
           <p class="text-gray-500 text-sm mt-1">Resumo da guilda em tempo real</p>
-          <p id="vip-label" class="mt-1 text-xs text-gray-500">Guilda: <span class="font-bold text-gray-800"> id="current-plan-name" </span></p>
-        </div>
+          <span id="current-plan-pill" class="inline-flex items-center gap-2 px-3 py-1.5 rounded-xl bg-gray-50 text-gray-600 text-sm border border-gray-200 whitespace-nowrap ml-auto">
+                <i data-lucide="sparkles" class="w-4 h-4"></i>
+                <span>Plano atual: <b id="current-plan-name">—</b></span>
 
         <!-- Cards de Estatísticas -->
         <div class="grid grid-cols-2 lg:grid-cols-4 gap-4" id="stats-container">
