--- a/dashboard.html
+++ b/dashboard.html
@@ -81,7 +81,9 @@
           <button id="mobile-menu-btn" class="lg:hidden p-2 rounded-xl hover:bg-gray-100 text-gray-500">
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="w-5 h-5"><line x1="4" x2="20" y1="12" y2="12"/><line x1="4" x2="20" y1="6" y2="6"/><line x1="4" x2="20" y1="18" y2="18"/></svg>
           </button>
-          <h1 class="text-lg font-semibold text-gray-900">Dashboard</h1>
+          <h1 class="text-lg font-semibold text-gray-900">Dashboard</h1> <span id="current-plan-pill" class="inline-flex items-center gap-2 px-3 py-1.5 rounded-xl bg-gray-50 text-gray-600 text-sm border border-gray-200 whitespace-nowrap ml-auto">
+                <i data-lucide="sparkles" class="w-4 h-4"></i>
+                <span>Plano atual: <b id="current-plan-name">—</b></span>
         </div>
       </header>
 
@@ -89,9 +91,7 @@
         <div>
           <h2 class="text-2xl font-bold text-gray-900">Visão Geral</h2>
           <p class="text-gray-500 text-sm mt-1">Resumo da guilda em tempo real</p>
-          <span id="current-plan-pill" class="inline-flex items-center gap-2 px-3 py-1.5 rounded-xl bg-gray-50 text-gray-600 text-sm border border-gray-200 whitespace-nowrap ml-auto">
-                <i data-lucide="sparkles" class="w-4 h-4"></i>
-                <span>Plano atual: <b id="current-plan-name">—</b></span>
+       
 
         <!-- Cards de Estatísticas -->
         <div class="grid grid-cols-2 lg:grid-cols-4 gap-4" id="stats-container">
