--- a/chefe.html
+++ b/chefe.html
@@ -354,7 +354,7 @@ function fmtDate(ts) {
       document.getElementById('btn-save-vip').onclick = async () => {
         const nv = document.getElementById('edit-vip-sel').value;
         try {
-          updateDoc(doc(db, 'configGuilda', gid), { vipTier: nv, vipExpiresAt: buildVipExpiresAt(nv);
+          await updateDoc(doc(db, 'configGuilda', gid), { vipTier: nv, vipExpiresAt: buildVipExpiresAt(nv) });
           showToast('success', `Plano da guilda ${g.name} alterado para ${nv.toUpperCase()}`);
           closeDrawer();
           loadData();
@@ -443,7 +443,7 @@ function fmtDate(ts) {
 
         if(!gid) throw new Error("Não foi possível localizar a guilda.");
 
-        updateDoc(doc(db, 'configGuilda', gid), { vipTier: plano, vipExpiresAt: buildVipExpiresAt(plano);
+        await updateDoc(doc(db, 'configGuilda', gid), { vipTier: nv, vipExpiresAt: buildVipExpiresAt(nv) });
         
         showToast('success', 'Upgrade aprovado e ativo para a guilda!');
         loadSolicita();
